# virtonom

./: CMakeLists.txt  main.cpp
Virtolib/: CMakeLists.txt
Virtolib/inc/: VirtoHandler.hpp
Virtolib/src/: VirtoHandler.cpp
Virtolib/ut/: CMakeLists.txt  Test.cpp
